--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "displayName": "Dev Essentials Pack",
     "description": "A collection of essential extensions for developers that I use in all my VSCode profiles.",
     "publisher": "SiriusRed",
-    "version": "1.0.0",
+    "version": "3.0.0",
     "icon": "assets/icon_128.png",
     "license": "MIT",
     "author": {
@@ -35,7 +35,6 @@
         "adpyke.codesnap",
         "bierner.markdown-preview-github-styles",
         "christian-kohler.path-intellisense",
-        "daltonmenezes.aura-theme",
         "davidanson.vscode-markdownlint",
         "dotenv.dotenv-vscode",
         "eamodio.gitlens",
@@ -55,16 +54,19 @@
         "ms-azuretools.vscode-docker",
         "ms-vscode-remote.remote-wsl",
         "ms-vscode.makefile-tools",
+        "ms-vscode.powershell",
         "mtxr.sqltools",
         "ndonfris.fish-lsp",
-        "pedrohenrique-ql.regex-match",
         "redhat.vscode-xml",
         "redhat.vscode-yaml",
         "shinotatwu-ds.file-tree-generator",
         "streetsidesoftware.code-spell-checker",
-        "streetsidesoftware.code-spell-checker-portuguese-brazilian",
+        "streetsidesoftware.code-spell-checker-cspell-bundled-dictionaries",
         "tamasfe.even-better-toml",
         "tanhakabir.rest-book",
+        "tetradresearch.vscode-h2o",
+        "visualstudioexptteam.intellicode-api-usage-examples",
+        "visualstudioexptteam.vscodeintellicode",
         "yzhang.markdown-all-in-one"
     ],
     "devDependencies": {
@@ -81,5 +83,6 @@
             "@vscode/vsce-sign",
             "keytar"
         ]
-    }
+    },
+    "packageManager": "pnpm@10.4.1+sha512.c753b6c3ad7afa13af388fa6d808035a008e30ea9993f58c6663e2bc5ff21679aa834db094987129aa4d488b86df57f7b634981b2f827cdcacc698cc0cfb88af"
 }
