feat(scripts): Add update-only option and package command
- Added `ext:update` script for updating package.json without committing
- Introduced `ext:package` script for creating VSIX package
- Modified `makeRelease` function to support update-only mode
- Updated CLI argument parsing in release script

--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "scripts": {
         "ext:setup": "pnpm install && vsce login SiriusRed",
         "ext:release": "node scripts/release.js",
+        "ext:update": "node scripts/release.js --update-only",
+        "ext:package": "vsce package",
         "ext:publish": "vsce publish",
         "fmt": "prettier --write **/*.{js,json,md}"
     },
