feat(extensions): Add new VSCode extensions and update package version
- Added 11 new VSCode extensions to .vscode/extensions.json
- Updated package.json with corresponding new extensions
- Bumped version from 3.0.0 to 3.1.0 in package.json
- Added extensions for shell scripting, CMake, batch files, and security

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -35,6 +35,17 @@
         "visualstudioexptteam.intellicode-api-usage-examples",
         "ms-vscode.powershell",
         "monish.regexsnippets",
-        "tetradresearch.vscode-h2o"
+        "tetradresearch.vscode-h2o",
+        "uvkush.all-code-one-file",
+        "ms-vscode.cmake-tools",
+        "rechinformatica.rech-editor-batch",
+        "timonwong.shellcheck",
+        "rogalmic.bash-debug",
+        "mads-hartmann.bash-ide-vscode",
+        "remisa.shellman",
+        "xshrim.txt-syntax",
+        "jeff-hykin.better-shellscript-syntax",
+        "meronz.manpages",
+        "ms-cst-e.vscode-devskim"
     ]
 }
