--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "displayName": "Dev Essentials Pack",
     "description": "A collection of essential extensions for developers that I use in all my VSCode profiles.",
     "publisher": "SiriusRed",
-    "version": "3.0.0",
+    "version": "3.1.0",
     "icon": "assets/icon_128.png",
     "license": "MIT",
     "author": {
@@ -50,25 +50,36 @@
         "intellsmi.comment-translate",
         "ionutvmi.reg",
         "jeff-hykin.better-dockerfile-syntax",
+        "jeff-hykin.better-shellscript-syntax",
+        "mads-hartmann.bash-ide-vscode",
         "mamacarlos.envautoexample",
+        "meronz.manpages",
         "mkhl.direnv",
         "monish.regexsnippets",
         "ms-azuretools.vscode-docker",
+        "ms-cst-e.vscode-devskim",
         "ms-vscode-remote.remote-wsl",
+        "ms-vscode.cmake-tools",
         "ms-vscode.makefile-tools",
         "ms-vscode.powershell",
         "mtxr.sqltools",
         "ndonfris.fish-lsp",
+        "rechinformatica.rech-editor-batch",
         "redhat.vscode-xml",
         "redhat.vscode-yaml",
+        "remisa.shellman",
+        "rogalmic.bash-debug",
         "shinotatwu-ds.file-tree-generator",
         "streetsidesoftware.code-spell-checker",
         "streetsidesoftware.code-spell-checker-cspell-bundled-dictionaries",
         "tamasfe.even-better-toml",
         "tanhakabir.rest-book",
         "tetradresearch.vscode-h2o",
+        "timonwong.shellcheck",
+        "uvkush.all-code-one-file",
         "visualstudioexptteam.intellicode-api-usage-examples",
         "visualstudioexptteam.vscodeintellicode",
+        "xshrim.txt-syntax",
         "yzhang.markdown-all-in-one"
     ],
     "devDependencies": {
